trunk/force4facebook3_use_branches-force4facebook3_toolkit/src/objects/SiteConfig__c.object
<CustomObject>
    <fields>
        <fullName>APIKey__c</fullName>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacebookAppSecret__c</fullName>
        <label>Facebook App Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewPortalUserAccount__c</fullName>
        <label>New Portal User Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Site Configs</relationshipLabel>
        <relationshipName>Site_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Site Config</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>